--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 ---
 layout: post-index
-title: BST 260 Final Project
+title: Dr.Google ?
 description: "Main Page"
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 image:
-  feature: abstract-1.jpg
-  credit: dargadgetz
-  creditlink: http://www.dargadgetz.com/ios-7-abstract-wallpaper-pack-for-iphone-5-and-ipod-touch-retina/
+  feature: health_search.jpg
+  creditlink: http://www.digitalintervention.com/2017/12/09/google-search-expert/shutterstock_14-1f563083841-original/
 ---
 
 {% for post in paginator.posts %}
