--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: post-index
-title: Dr.Google ?
+title: 
 description: "Main Page"
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
