--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ description: "Main Page"
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 image:
-  feature: health_search.jpg
+  feature: health.jpg
   creditlink: http://www.digitalintervention.com/2017/12/09/google-search-expert/shutterstock_14-1f563083841-original/
 ---
 
